--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-frontend-dev-portfolio",
-  "homepage": "http://.",
+  "homepage": "http://Fung1117.github.io/Fung1117.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
