--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-react",
-  "homepage": "http://fung1117.github.io/",
+  "homepage": "https://fung1117.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
